src/objects/Vendor_Allocation__c.object
<CustomObject>
    <fields>
        <fullName>Allocated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User Specified</description>
        <label>Allocated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allocation_TypeInVA__c</fullName>
        <formula>TEXT( Parcel_Name__r.Allocation_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allocation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Name__c</fullName>
        <formula>SingPost_Address__r.Building_Name__c</formula>
        <label>Building Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Vendor Allocations</relationshipLabel>
        <relationshipName>Vendor_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <description>User Specified</description>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <description>User Specified</description>
        <label>Effective Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>House_Block_No__c</fullName>
        <formula>SingPost_Address__r.House_Block_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>House/Block Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_Type__c</fullName>
        <formula>SingPost_Address__r.Address_Type__c</formula>
        <label>House Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <label>Legacy Created By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_By__c</fullName>
        <label>Legacy Updated By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_Date__c</fullName>
        <label>Legacy Updated Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Agent_Code__c</fullName>
        <formula>Vendor_Account__r.Mailing_Agent_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Agent Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Vendor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User Specified</description>
        <label>Old Vendor Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Vendor Subscriber, Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Allocations (Old Vendor Account)</relationshipLabel>
        <relationshipName>Vendor_Allocation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User Specified</description>
        <label>Operated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parcel_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>User Specified</description>
        <label>Parcel Name</label>
        <referenceTo>Parcel__c</referenceTo>
        <relationshipLabel>Vendor Allocations</relationshipLabel>
        <relationshipName>Vendor_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process_Status__c</fullName>
        <description>User Specified</description>
        <label>Process Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Parcel_Name__r.Project_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_SPH__c</fullName>
        <formula>Vendor_Account__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPH_Unique__c</fullName>
        <label>Unique</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SingPost_Address__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>User Specified</description>
        <label>Postal Code</label>
        <referenceTo>Singpost_Address__c</referenceTo>
        <relationshipLabel>Vendor Allocations</relationshipLabel>
        <relationshipName>Vendor_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF (Effective_End_Date__c &lt; TODAY(),
&quot;inactive&quot;,
&quot;active&quot;)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <formula>SingPost_Address__r.Street_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription (Vendor)</label>
        <referenceTo>Subscription_Vendor__c</referenceTo>
        <relationshipLabel>Vendor Allocations</relationshipLabel>
        <relationshipName>Vendor_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>Vendor Allocations</relationshipLabel>
        <relationshipName>Vendor_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Units__c</fullName>
        <formula>SingPost_Address__r.Number_of_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>User Specified</description>
        <label>Vendor Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Allocations</relationshipLabel>
        <relationshipName>Vendor_Allocations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Allocation_Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Vendor Allocation Legacy Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vendor_Code__c</fullName>
        <formula>Vendor_Account__r.Vendor_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Code</label>
        <type>Text</type>
    </fields>
    <label>Vendor Allocation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Vendor_Code__c</columns>
        <columns>SingPost_Address__c</columns>
        <columns>Vendor_Account__c</columns>
        <columns>Status__c</columns>
        <columns>Parcel_Name__c</columns>
        <columns>Project_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>test</fullName>
        <columns>NAME</columns>
        <columns>Vendor_Code__c</columns>
        <columns>SingPost_Address__c</columns>
        <columns>Vendor_Account__c</columns>
        <columns>Status__c</columns>
        <columns>Parcel_Name__c</columns>
        <columns>Project_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SingPost_Address__c</field>
            <operation>equals</operation>
            <value>159637</value>
        </filters>
        <label>test</label>
    </listViews>
    <nameField>
        <displayFormat>VA-{0000}</displayFormat>
        <label>Vendor Allocation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Allocations</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Eff_end_date_must_be_greater_than_eff_st</fullName>
        <active>true</active>
        <description>Effective end date must be greater than effective start date and must not be a past date</description>
        <errorConditionFormula>Effective_End_Date__c  &lt;  Effective_Start_Date__c || Effective_End_Date__c &lt; TODAY()</errorConditionFormula>
        <errorDisplayField>Effective_End_Date__c</errorDisplayField>
        <errorMessage>Effective End Date must be greater than Effective Start Date and must not be a past date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pick_Atleast_one_field</fullName>
        <active>true</active>
        <description>Must pick atleast one</description>
        <errorConditionFormula>AND( Allocated__c  = FALSE , Operated__c = FALSE)</errorConditionFormula>
        <errorDisplayField>Allocated__c</errorDisplayField>
        <errorMessage>Please select  atleast one (Allocated and/or Operated)</errorMessage>
    </validationRules>
</CustomObject>